[project]
name = "incident-triage-env"
version = "0.1.0"
description = "AI Incident Triage Environment"
authors = [{name = "Chethan"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
